force-app/main/default/objects/Lead/fields/Active_of_Employees_in_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Active_of_Employees_in_Relationship__c</fullName>
    <label>Active # of Employees in Relationship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>