force-app/main/default/objects/Lead/fields/Advisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Name__c</fullName>
    <formula>Associated_Contact__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advisor Name</label>
    <type>Text</type>
</CustomField>