force-app/main/default/objects/Lead/fields/Advisor_s_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Advisor_s_Last_Activity__c</fullName>
    <formula>Associated_Contact__r.LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advisor&apos;s Last Activity</label>
    <type>Date</type>
</CustomField>