force-app/main/default/objects/Lead/fields/AI_Single_k_Auto_Invest__c.field-meta.xml
<CustomField>
    <fullName>AI_Single_k_Auto_Invest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AI Single(k) Auto-Invest</label>
    <type>Checkbox</type>
</CustomField>