force-app/main/default/objects/Lead/fields/Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User__c</fullName>
    <formula>Owner:User.FirstName  + &quot; &quot; +  Owner:User.LastName</formula>
    <label>Assigned User</label>
    <type>Text</type>
</CustomField>