force-app/main/default/objects/Lead/fields/Associated_Contact__c.field-meta.xml
<CustomField>
    <fullName>Associated_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact that is associated with the lead. (i.e. Advisor, Lead Referrer, etc). This field will be used to link advisors and people who refer leads to Ubiquity.</description>
    <inlineHelpText>Contact that is associated with the lead. (i.e. Advisor, Lead Referrer, etc). This field will be used to link advisors and people who refer leads to Ubiquity.</inlineHelpText>
    <label>Associated Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>