force-app/main/default/objects/Lead/fields/Associated_Contact_City__c.field-meta.xml
<CustomField>
    <fullName>Associated_Contact_City__c</fullName>
    <description>Associated Contact City</description>
    <formula>Associated_Contact__r.MailingCity</formula>
    <inlineHelpText>Associated Contact City</inlineHelpText>
    <label>Associated Contact City</label>
    <type>Text</type>
</CustomField>