force-app/main/default/objects/Lead/fields/Associated_Contact_CRD__c.field-meta.xml
<CustomField>
    <fullName>Associated_Contact_CRD__c</fullName>
    <description>Associated Contact CRD Number</description>
    <formula>Associated_Contact__r.CRD_Number__c</formula>
    <inlineHelpText>Associated Contact CRD Number</inlineHelpText>
    <label>Associated Contact CRD</label>
    <type>Text</type>
</CustomField>