force-app/main/default/objects/Lead/fields/Associated_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Associated_Contact_Email__c</fullName>
    <description>Email of Associated Contact</description>
    <formula>Associated_Contact__r.Email</formula>
    <inlineHelpText>Email of Associated Contact</inlineHelpText>
    <label>Associated Contact Email</label>
    <type>Text</type>
</CustomField>