force-app/main/default/objects/Lead/fields/Associated_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Associated_Contact_Phone__c</fullName>
    <formula>Associated_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated Contact Phone</label>
    <type>Text</type>
</CustomField>