force-app/main/default/objects/Lead/fields/Associated_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Associated_Contact_Role__c</fullName>
    <description>What role does this Contact play on the Lead?</description>
    <inlineHelpText>What role does this Contact play on the Lead?</inlineHelpText>
    <label>Associated Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plan Sponsor</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>Plan Sponsor &amp; Trustee</fullName>
            </value>
            <value>
                <fullName>Financial Advisor</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>Payroll Provider</fullName>
            </value>
            <value>
                <fullName>Lawyer</fullName>
            </value>
            <value>
                <fullName>Interested Third Party</fullName>
            </value>
            <value>
                <fullName>Referrer</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>