force-app/main/default/objects/Lead/fields/Associated_Contact_Stage_Flag__c.field-meta.xml
<CustomField>
    <fullName>Associated_Contact_Stage_Flag__c</fullName>
    <formula>TEXT(Associated_Contact__r.Stage_Flag__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated Contact Stage Flag</label>
    <type>Text</type>
</CustomField>