force-app/main/default/objects/Lead/fields/Associated_Contact_State__c.field-meta.xml
<CustomField>
    <fullName>Associated_Contact_State__c</fullName>
    <description>Associated Contact State</description>
    <formula>Associated_Contact__r.MailingState</formula>
    <inlineHelpText>Associated Contact State</inlineHelpText>
    <label>Associated Contact State</label>
    <type>Text</type>
</CustomField>