force-app/main/default/objects/Lead/fields/Associated_Contact_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Associated_Contact_Zip_Code__c</fullName>
    <description>Associated Contact Zip Code</description>
    <formula>Associated_Contact__r.MailingPostalCode</formula>
    <inlineHelpText>Associated Contact Zip Code</inlineHelpText>
    <label>Associated Contact Zip Code</label>
    <type>Text</type>
</CustomField>