force-app/main/default/objects/Lead/fields/Associated_Partner__c.field-meta.xml
<CustomField>
    <fullName>Associated_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populate the associated partner&apos;s account. Most often used for Advisors or someone else who will be involved in the purchase decision.</description>
    <inlineHelpText>Populate the associated partner&apos;s account. Most often used for Advisors or someone else who will be involved in the purchase decision.</inlineHelpText>
    <label>Associated Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>