force-app/main/default/objects/Lead/fields/Associated_Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>Associated_Partner_Id__c</fullName>
    <description>We can&apos;t directly populate the Associated Partner lookup field on the web to lead forms. This field stores the value, then a flow copies it into the lookup field when the lead is created.</description>
    <label>Associated Partner Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>