force-app/main/default/objects/Lead/fields/Associated_Partner_Role__c.field-meta.xml
<CustomField>
    <fullName>Associated_Partner_Role__c</fullName>
    <description>What role does this Partner play for this Lead?</description>
    <inlineHelpText>What role does this Partner play for this Lead?</inlineHelpText>
    <label>Associated Partner Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial Advisory Firm</fullName>
            </value>
            <value>
                <fullName>CPA Firm</fullName>
            </value>
            <value>
                <fullName>Payroll Provider</fullName>
            </value>
            <value>
                <fullName>Law Office</fullName>
            </value>
            <value>
                <fullName>HCM Provider</fullName>
            </value>
            <value>
                <fullName>Interested Third Party</fullName>
            </value>
            <value>
                <fullName>Referring Partner</fullName>
            </value>
            <value>
                <fullName>Financial Advisory Firm (Referral Only)</fullName>
            </value>
            <value>
                <fullName>Financial Institution Partner</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>