force-app/main/default/objects/Lead/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <description>Indicate whether the lead contact has authority to purchase products from Ubiquity</description>
    <label>Authority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Has Authority to Make Decisions</fullName>
            </value>
            <value>
                <fullName>Information Gatherer</fullName>
            </value>
            <value>
                <fullName>No Authority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>