force-app/main/default/objects/Lead/fields/Auto_Enroll_Contribution_Increase__c.field-meta.xml
<CustomField>
    <fullName>Auto_Enroll_Contribution_Increase__c</fullName>
    <label>Auto-Enroll Contribution Increase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1% each year, up to 10%</fullName>
            </value>
            <value>
                <fullName>Employee Decides</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>