force-app/main/default/objects/Lead/fields/Best_Contact_Time_Message__c.field-meta.xml
<CustomField>
    <fullName>Best_Contact_Time_Message__c</fullName>
    <description>Best time to contact the lead.</description>
    <inlineHelpText>The lead has communicated in this area when the best time to contact  them is.</inlineHelpText>
    <label>Best Contact Time Message</label>
    <type>TextArea</type>
</CustomField>