force-app/main/default/objects/Lead/fields/Business_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Start_Date__c</fullName>
    <description>When did the company start?</description>
    <inlineHelpText>When did the company start?</inlineHelpText>
    <label>Business Start Date</label>
    <type>Date</type>
</CustomField>