force-app/main/default/objects/Lead/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>Used to distinguish Business Units within Salesforce</description>
    <inlineHelpText>Used to distinguish Business Units within Salesforce</inlineHelpText>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Units</valueSetName>
    </valueSet>
</CustomField>