force-app/main/default/objects/Lead/fields/Called_Sales_For_Safe_Harbor__c.field-meta.xml
<CustomField>
    <fullName>Called_Sales_For_Safe_Harbor__c</fullName>
    <inlineHelpText>Choose &apos;Yes&apos; if the prospect has called a sales rep to discuss a Safe Harbor 401(k)</inlineHelpText>
    <label>Called Sales For Safe Harbor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>