force-app/main/default/objects/Lead/fields/campaign_code__c.field-meta.xml
<CustomField>
    <fullName>campaign_code__c</fullName>
    <label>Campaign code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>