force-app/main/default/objects/Lead/fields/Can_accept_HTML__c.field-meta.xml
<CustomField>
    <fullName>Can_accept_HTML__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can accept HTML</label>
    <type>Checkbox</type>
</CustomField>