force-app/main/default/objects/Lead/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1099</fullName>
            </value>
            <value>
                <fullName>Accounting &amp; Tax</fullName>
            </value>
            <value>
                <fullName>Advisors</fullName>
            </value>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Associations</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Broker Dealer</fullName>
            </value>
            <value>
                <fullName>Custodians</fullName>
            </value>
            <value>
                <fullName>DCIO</fullName>
            </value>
            <value>
                <fullName>Financial Institutions</fullName>
            </value>
            <value>
                <fullName>Franchise</fullName>
            </value>
            <value>
                <fullName>Government Plans</fullName>
            </value>
            <value>
                <fullName>HCM</fullName>
            </value>
            <value>
                <fullName>HSA</fullName>
            </value>
            <value>
                <fullName>Hybrids/Retailers</fullName>
            </value>
            <value>
                <fullName>Independent Recordkeeper</fullName>
            </value>
            <value>
                <fullName>Insurance Broker</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>PEO</fullName>
            </value>
            <value>
                <fullName>Special Interest</fullName>
            </value>
            <value>
                <fullName>State Plans</fullName>
            </value>
            <value>
                <fullName>Strategic Alignment</fullName>
            </value>
            <value>
                <fullName>TPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>