force-app/main/default/objects/Lead/fields/Company_FEIN__c.field-meta.xml
<CustomField>
    <fullName>Company_FEIN__c</fullName>
    <label>Company FEIN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>