force-app/main/default/objects/Lead/fields/Connected_Partner_Rep__c.field-meta.xml
<CustomField>
    <fullName>Connected_Partner_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connected Partner Rep</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Partnership_Type__c</field>
            <operation>equals</operation>
            <value>Integrated Partnership Referral</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Connected Partner Rep)</relationshipLabel>
    <relationshipName>Connected_Partner_Rep</relationshipName>
    <type>Lookup</type>
</CustomField>