force-app/main/default/objects/Lead/fields/Contribution_Type__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Type__c</fullName>
    <label>Contribution Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>