force-app/main/default/objects/Lead/fields/CRD_Number__c.field-meta.xml
<CustomField>
    <fullName>CRD_Number__c</fullName>
    <description>Central Registration Depository Number for advisor.</description>
    <inlineHelpText>Central Registration Depository Number for advisor.</inlineHelpText>
    <label>CRD Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>