force-app/main/default/objects/Lead/fields/Create_Opp__c.field-meta.xml
<CustomField>
    <fullName>Create_Opp__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create Opp</label>
    <type>Checkbox</type>
</CustomField>