force-app/main/default/objects/Lead/fields/Created_Week__c.field-meta.xml
<CustomField>
    <fullName>Created_Week__c</fullName>
    <formula>FLOOR(
(DATEVALUE(CreatedDate) -
DATE(YEAR(DATEVALUE(CreatedDate) -
WEEKDAY(DATEVALUE(CreatedDate)-1)+4),1,3)+

WEEKDAY(DATE(YEAR(DATEVALUE(CreatedDate) -
WEEKDAY(DATEVALUE(CreatedDate)-1)+4),1,3))+5)/7
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>