force-app/main/default/objects/Lead/fields/Credentialed_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Credentialed_Advisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credentialed Advisor</label>
    <type>Checkbox</type>
</CustomField>