force-app/main/default/objects/Lead/fields/Current_Payroll_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Payroll_Provider__c</fullName>
    <label>Current Payroll Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>