force-app/main/default/objects/Lead/fields/Current_Plan__c.field-meta.xml
<CustomField>
    <fullName>Current_Plan__c</fullName>
    <description>Does prospect have a current retirement plan in place for the business?</description>
    <inlineHelpText>Does prospect have a current retirement plan in place for the business?</inlineHelpText>
    <label>Current Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>401(k)</fullName>
            </value>
            <value>
                <fullName>Not sure</fullName>
            </value>
            <value>
                <fullName>SIMPLE</fullName>
            </value>
            <value>
                <fullName>SEP IRA</fullName>
            </value>
            <value>
                <fullName>Defined Benefit</fullName>
            </value>
            <value>
                <fullName>Money Purchase</fullName>
            </value>
            <value>
                <fullName>KEOGH</fullName>
            </value>
            <value>
                <fullName>Not Comfortable Answering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>