force-app/main/default/objects/Lead/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>Determines similar domains</description>
    <formula>CASE( SUBSTITUTE(Email, LEFT(Email, FIND(&quot;@&quot;, Email)), NULL), 
&apos;yahoo.com&apos;, NULL, &apos;gmail.com&apos;, NULL, &apos;hotmail.com&apos;, NULL, &apos;aol.com&apos;, NULL, &apos;outlook.com&apos;, NULL, 
SUBSTITUTE(Email, LEFT(Email, FIND(&quot;@&quot;, Email)), NULL) )</formula>
    <label>Domain</label>
    <type>Text</type>
</CustomField>