force-app/main/default/objects/Lead/fields/DoNotCallCustom_StageDefault__c.field-meta.xml
<CustomField>
    <fullName>DoNotCallCustom_StageDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom lead field that is checked if the standard Lead field DoNotCall is checked.</description>
    <inlineHelpText>Custom lead field that is checked if the standard Lead field DoNotCall is checked.</inlineHelpText>
    <label>DoNotCallCustom-StageDefault</label>
    <type>Checkbox</type>
</CustomField>