force-app/main/default/objects/Lead/fields/Eligible_for_Contact_Merge__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Contact_Merge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for Contact Merge</label>
    <type>Checkbox</type>
</CustomField>